# cryptocurrency-price-prediction-with-lstm-and-transformer-mo

./: CLAUDE.md  README.md  pyproject.toml
configs/: default.yaml
docs/: open_questions.md
reports/cycle_1/: metrics.json  technical_findings.md
reports/cycle_10/: metrics.json  technical_findings.md
reports/cycle_11/: metrics.json  technical_findings.md
reports/cycle_2/: metrics.json  technical_findings.md
reports/cycle_3/: metrics.json  technical_findings.md
reports/cycle_4/: metrics.json  technical_findings.md
reports/cycle_5/: metrics.json  technical_findings.md
reports/cycle_6/: metrics.json  technical_findings.md
reports/cycle_7/: metrics.json  technical_findings.md
reports/cycle_8/: metrics.json  technical_findings.md
reports/cycle_9/: metrics.json  technical_findings.md
src/: cli.py  data.py  evaluation.py  indicators.py  models.py  preprocessing.py  training.py
tests/: test_data.py  test_evaluation.py  test_indicators.py  test_models.py  test_preprocessing.py  test_training.py
